assets/css/style.css
body {
    background: url(../images/page/sky.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*---------- Page and Logo----------*/
.page {
    max-width: 960px;
    margin: auto;
    background-color: #3ADAFB;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px;
}
.logo {
    display: flex;
}
.logo-center {
    width: 50%;
    text-align: center;
}
.logo-center h1 {
    font-size: 64px;
    color: #FF812C;
    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
}
#info {
    width: 50%;
}

/*---------- Menu message----------*/
.popup {
    text-align: center;
}
.popup p {
    font-size: 32px;
    color: #FF812C;
    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
}
/*--------- Play Button----------*/
.welcome {
    text-align: center;
}
.btn {
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px;
    font-size: 64px;
    background-color:#FF812C ;
    color: #FFFFFE;
    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
    text-decoration: none;
    padding: 5px;
}
.btn:active {
    box-shadow: 0 5px rgba(0, 0, 0, 0.7) 0px 10px 30px;
    transform: translateY(4px);
}
.space {
    height: 50px;
}
/*--------- Game statistics ---------*/
.play-stats {
    display: flex;
}
.stats-info-right {
    display: grid;
    width: 50%;
    text-align: center;
    font-size: 32px;
    color: #FF812C;
    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
}
.stats-info-right p {
    margin: auto;
}
.message {
    text-align: center;
}

.carrots {
    width: 50%;
    text-align: center;
}
#clickCarrot {
    width: 50%;
}

/*----------Friends / Upgrades---------*/
.help-upgrades {
    display: grid;
}
.help {
    display: grid;
    text-align: center;
}
.upgrades {
    display: grid;
    text-align: center;
}
.object {
    display: flex;
}
.pic {
    width: 30%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.details {
    width: 40%;
    
}
.details p {
    font-size: 22px;
    color: #FF812C;
    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
}
.button {
    width: 30%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.buyButton {
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px;
    font-size: 34px;
    background-color:#FF812C ;
    color: #FFFFFE;
    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
}
.buyButton:active {
    box-shadow: 0 5px rgba(0, 0, 0, 0.7) 0px 10px 30px;
    transform: translateY(2px);
}
#hero {
    width: 50%;
    border-radius: 50%;
}
#upgrades {
    width: 40%;
}

/*---------- Footer ---------*/

.frame {
    text-align: center;
}
.media {
    display: flex;
    justify-content: space-around;
}
.personal {
    font-size: 24px;
    color: #FF812C;
    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
}

/*---------- All media ----------*/
@media screen and (max-width: 800px) {
    .btn {
        font-size: 58px;
    }
    .logo-center h1 {
        font-size: 58px;
    }
    .stats-info-right {
        font-size: 30px;
    }
    .popup p {
        font-size: 30px;
    }
    .details p {
        font-size: 21px;
    }
    .buyButton {
        font-size: 30px;
    }
}  

@media screen and (max-width: 700px) {
    .btn {
        font-size: 50px;
    }
    .logo-center h1 {
        font-size: 50px;
    }
    .stats-info-right {
        font-size: 26px;
    }
    .popup p {
        font-size: 26px;
    }
    .details p {
        font-size: 19px;
    }
    .buyButton {
        font-size: 25px;
    }
}

@media screen and (max-width: 600px) {
    .btn {
        font-size: 46px;
    }
    .logo-center h1 {
        font-size: 46px;
    }
    .stats-info-right {
        font-size: 24px;
    }
    .popup p {
        font-size: 24px;
    }
    .details p {
        font-size: 17px;
    }
    .buyButton {
        font-size: 20px;
    }
}

@media screen and (max-width: 500px) {
    .btn {
        font-size: 40px;
    }
    .logo-center h1 {
        font-size: 40px;
    }
    .stats-info-right {
        font-size: 23px;
    }
    .popup p {
        font-size: 23px;
    }
    .details p {
        font-size: 15px;
    }
    .buyButton {
        font-size: 15px;
    }
}

@media screen and (max-width: 450px) {
    .btn {
        font-size: 37px;
    }
    .logo-center h1 {
        font-size: 37px;
    }
    .stats-info-right {
        font-size: 21px;
    }
    .popup p {
        font-size: 21px;
    }
    .details p {
        font-size: 13px;
    }
    .buyButton {
        font-size: 13px;
    }
}

@media screen and (max-width: 400px) {
    .btn {
        font-size: 33px;
    }
    .logo-center h1 {
        font-size: 33px;
    }
    .stats-info-right {
        font-size: 18px;
    }
    .popup p {
        font-size: 18px;
    }
    .details p {
        font-size: 11px;
    }
    .buyButton {
        font-size: 11px;
    }
}

@media screen and (max-width: 350px) {
    .btn {
        font-size: 28px;
    }
    .logo-center h1 {
        font-size: 28px;
    }
    .stats-info-right {
        font-size: 15px;
    }
    .popup p {
        font-size: 15px;
    }
    .details p {
        font-size: 10px;
    }
    .buyButton {
        font-size: 10px;
    }
}

@media screen and (max-width: 300px) {
    .btn {
        font-size: 25px;
    }
    .logo-center h1 {
        font-size: 25px;
    }
    .stats-info-right {
        font-size: 13px;
    }
    .popup p {
        font-size: 13px;
    }
    .details p {
        font-size: 9px;
    }
    .buyButton {
        font-size: 9px;
    }
}

